# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("base") {
  sources = [
    "ip_address.cc",
    "ip_address.h",
  ]
}

executable("base_unittests") {
  testonly = true

  sources = [ "ip_address_unittest.cc" ]

  deps = [
    ":base",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
  ]
}
