# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

source_set("base") {
  sources = [
    "big_endian.h",
    "boringssl_util.cc",
    "boringssl_util.h",
    "error.cc",
    "error.h",
    "export.h",
    "ip_address.cc",
    "ip_address.h",
    "macros.h",
    "scoped_pipe.h",
    "stringprintf.h",
    "time.h",
    "with_destruction_callback.cc",
    "with_destruction_callback.h",
  ]

  deps = [
    "../third_party/abseil",
    "../third_party/boringssl",
  ]
  configs += [ "..:root_config_overrides" ]
}

source_set("base_unittests") {
  testonly = true

  sources = [
    "big_endian_unittest.cc",
    "error_unittest.cc",
    "ip_address_unittest.cc",
    "scoped_pipe_unittest.cc",
  ]

  deps = [
    ":base",
    "../third_party/abseil",
    "../third_party/googletest:gmock",
    "../third_party/googletest:gtest",
  ]
  if (build_with_chromium) {
    configs -= [ "//build/config/compiler:default_include_dirs" ]
  }
  configs += [ "..:root_config_overrides" ]
}
