# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  import("//build/config/android/config.gni")
}

# TODO(sky): nuke this. Temporary while sorting out http://crbug.com/465456.
enable_correct_v8_arch = false

# TODO: Set v8_use_external_startup_data to true on Windows and iOS to match
# GYP.
# iOS - http://crbug.com/545676
v8_use_external_startup_data = !is_ios

# V8 extras
# Adding V8 extras files requires API owners review
# Be sure to synchronize with build/common.gypi

v8_extra_library_files =
    [ "../third_party/WebKit/Source/core/streams/ReadableStreamTempStub.js" ]
v8_experimental_extra_library_files = [
  "../third_party/WebKit/Source/core/streams/ByteLengthQueuingStrategy.js",
  "../third_party/WebKit/Source/core/streams/CountQueuingStrategy.js",
  "../third_party/WebKit/Source/core/streams/ReadableStream.js",
]

if (is_android) {
  v8_external_startup_data_renaming_sources = [
    "$root_out_dir/natives_blob.bin",
    "$root_out_dir/snapshot_blob.bin",
  ]
  if (current_cpu == "arm" || current_cpu == "x86" || current_cpu == "mipsel") {
    v8_external_startup_data_renaming_destinations = [
      "natives_blob_32.bin",
      "snapshot_blob_32.bin",
    ]
  } else {
    v8_external_startup_data_renaming_destinations = [
      "natives_blob_64.bin",
      "snapshot_blob_64.bin",
    ]
  }
}
