# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

build_with_chromium = true

# Exclude pulse audio on Chromium since its prerequisites don't require
# pulse audio.
rtc_include_pulse_audio = false

# Exclude internal ADM since Chromium uses its own IO handling.
rtc_include_internal_audio_device = false
